[2.0]
- Removed categories and projects

[1.2]
- Added CHANGELOG
- Added help description
- Changed Config manager to store configs in proprietary way
- Fixed exit with Ctrl-C: no more call stack traces