@@ -13,11 +13,7 @@ from latte.latte import Latte
 from latte.Analyzer import Analyzer
 from latte.Config import Config
 
-if len(sys.argv) == 1:
-    Latte().run()
-elif len(sys.argv) >= 2 and sys.argv[1] == 'analyze':
-    Analyzer(Config(), sys.argv[2:]).run()
-else:
+if len(sys.argv) == 2 and sys.argv[1] == '-h':
     print '''Linux automatic time tracker
 
 Tracks time spent on activities based on window titles and categorizes
@@ -27,7 +23,7 @@ More information: https://github.com/flakas/Latte
 
 Usage:
 
-latte                    Run activity logger
+latte            Run activity logger
 lattestats       Analyze all log data
 lattestats X d   Analyze log data for past X days
 lattestats X w   Analyze log data for past X weeks
@@ -35,3 +31,5 @@ lattestats X m   Analyze log data for past X months
 lattestats X     Analyze log data for past X seconds
 
 latte -h            Display this message and exit'''
+else:
+    Analyzer(Config(), Latte().get_session(), sys.argv[1:]).run()
