@@ -1,11 +1,11 @@
-from sqlalchemy import Column, String, Integer, Date
+from sqlalchemy import Column, String, Integer, Date, Unicode
 from .Base import Base
 
 class Log(Base):
     __tablename__ = 'logs'
 
     id = Column(Integer, primary_key=True)
-    window_title = Column(String)
+    window_title = Column(Unicode)
     date = Column(Date)
     duration = Column(Integer)
 
